z-index correction

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1578,7 +1578,7 @@ body.special
     font-size: 0.9em
     line-height: 1em
     color: #fff
-    z-index: 9999
+    z-index: 998
     font-weight: 700
     +font-smoothing(antialiased)
     a
